--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,14 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
+$primary   : #0d1c3d;
+$secondary : #166ea8;
 $accent    : #9C27B0;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$dark      : #1a1717;
+$dark-page : #262525;
 
 $positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
+$negative  : #f5001d;
+$info      : #35d1f0;
 $warning   : #F2C037;
