--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -16,8 +16,9 @@ $primary   : #0d1c3d;
 $secondary : #166ea8;
 $accent    : #9C27B0;
 
-$dark      : #1a1717;
-$dark-page : #262525;
+$dark      : #212529;
+$dark-page : #343a40;
+$dark-context: #ffffff;
 
 $positive  : #21BA45;
 $negative  : #f5001d;
